<resources>
    <string name="app_name" translatable="false">MobileHealth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="growth">Growth</string>
    <string name="weight">Weight</string>
    <string name="birth_date">Birth date</string>
    <string name="save">Save</string>
    <string name="main">Main</string>
    <string name="pfc">PFC</string>
    <string name="water_regime">Water regime</string>
    <string name="steps">Steps</string>
    <string name="medicines">Medicines</string>
    <string name="breath_technics">Breath technics</string>
    <string name="workouts">Workouts</string>
    <string name="steps_today">Steps today:</string>
    <string name="from">from</string>
    <string name="goal_achieved">You\'ve achieved your goal</string>
    <string name="days_in_a_row">days in a row</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="ml">ml</string>
    <string name="add">Add</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="name">Name</string>
    <string name="reception_time">Reception time</string>
    <string name="course_duration">Course duration</string>
    <string name="remain">Remain</string>
    <string name="medicine_adding">Medicine adding</string>
    <string name="settings">Settings</string>
    <string name="localization">Localization</string>
    <string name="rest_time">Rest time</string>
    <string name="push_notification">Push-notification</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>

    <string-array name="medicine_types">
        <item>Pill</item>
        <item>Syrup</item>
    </string-array>

    <array name="locals">
        <item>@string/english</item>
        <item>@string/russian</item>
    </array>
    <string name="breast">Breast</string>
    <string name="back">Back</string>
    <string name="legs">Legs</string>
    <string name="abs">ABS</string>
    <string name="put_your_weight">Put your weight in your profile</string>
    <string name="start_date">Start date</string>
    <string name="breast_description">triceps, shoulders</string>
    <string name="back_description">biceps, forearms</string>
    <string name="legs_description">lower back, abs</string>
    <string name="abs_description">legs</string>
    <string name="exercises">Exercises</string>
    <string name="go_back">Back</string>
    <string name="classic_push_ups">Classic Push ups</string>
    <string name="diamond_push_ups">Diamond Push ups</string>
    <string name="wide_push_ups">Wide Push ups</string>
    <string name="classic_pull_ups">Classic Pull ups</string>
    <string name="wide_pull_ups">Wide Pull ups</string>
    <string name="superman">Superman</string>
    <string name="squats">Squats</string>
    <string name="lunges">Lunges</string>
    <string name="crossfit_squats">Crossfit squats</string>
    <string name="toe_up">Toe up</string>
    <string name="twists">Twists</string>
    <string name="half_twists">Half twists</string>
    <string name="alpinist">Alpinist</string>
    <string name="plank">Plank</string>
</resources>