<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="32dp">

    <TextView
        android:id="@+id/tvMedicineAddingTitle"
        style="@style/steps_textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/medicine_adding"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddMedicineName"
        style="@style/main_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/medicines"
        android:ems="10"
        android:hint="@string/name"
        android:maxLength="30"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMedicineAddingTitle" />

    <EditText
        android:id="@+id/etAddMedicineReceptionTime"
        style="@style/main_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/medicines"
        android:ems="10"
        android:hint="@string/reception_time"
        android:inputType="datetime|time"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="@+id/etAddMedicineName"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/etAddMedicineName"
        app:layout_constraintTop_toBottomOf="@+id/etAddMedicineName" />

    <EditText
        android:id="@+id/etAddMedicineCourseDuration"
        style="@style/main_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/medicines"
        android:ems="10"
        android:hint="@string/course_duration"
        android:maxLength="3"
        android:inputType="datetime|time"
        app:layout_constraintEnd_toEndOf="@+id/etAddMedicineName"
        app:layout_constraintStart_toStartOf="@+id/etAddMedicineName"
        app:layout_constraintTop_toBottomOf="@+id/etAddMedicineReceptionTime" />

    <EditText
        android:id="@+id/etAddMedicineStartDate"
        style="@style/main_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/medicines"
        android:ems="10"
        android:hint="@string/start_date"
        android:maxLength="10"
        android:inputType="datetime|date"
        app:layout_constraintEnd_toEndOf="@+id/etAddMedicineName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etAddMedicineName"
        app:layout_constraintTop_toBottomOf="@+id/etAddMedicineReceptionTime" />

    <Spinner
        android:id="@+id/spinnerAddMedicineType"
        style="@style/spinner_main_style"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:entries="@array/medicine_types"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddMedicineStartDate" />

    <Button
        android:id="@+id/btnAddMedicine"
        style="@style/main_button_style"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/medicines"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAddMedicineType" />

</androidx.constraintlayout.widget.ConstraintLayout>