<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6CE4D4D">

            <ImageView
                android:id="@+id/ivMedicineImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/medicine_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvMedicineName"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/ivMedicineImage"
                app:layout_constraintTop_toTopOf="@+id/ivMedicineImage" />

            <TextView
                android:id="@+id/tvMedicineReceptionTime"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/reception_time"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/ivMedicineImage"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineName" />

            <TextView
                android:id="@+id/tvMedicineCourseDuration"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/course_duration"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/ivMedicineImage"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineReceptionTime" />

            <TextView
                android:id="@+id/tvMedicineCourseStartDate"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/start_date"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineCourseDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineCourseDuration" />

            <TextView
                android:id="@+id/tvMedicineDuration"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="0"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/tvMedicineCourseDuration"
                app:layout_constraintTop_toTopOf="@+id/tvMedicineCourseDuration" />

            <TextView
                android:id="@+id/tvMedicineStartDate"
                style="@style/steps_textview_style_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="0"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tvMedicineDuration"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineDuration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>