<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSettingsTitle"
        style="@style/steps_textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLocalizationIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                app:srcCompat="@drawable/localization_icon" />

            <TextView
                android:id="@+id/tvLocalizationTitle"
                style="@style/steps_textview_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/localization"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerLocalization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:entries="@array/locals"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRestTimeIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                app:srcCompat="@drawable/rest_time_icon" />

            <TextView
                android:id="@+id/tvRestTimeTitle"
                style="@style/steps_textview_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/rest_time"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRestTimePlus"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:text="+"
                style="@style/transparent_button_style" />

            <EditText
                android:id="@+id/etRestTime"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/btnRestTimeMinus"
                style="@style/transparent_button_style"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="-" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPushNotificationIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                app:srcCompat="@drawable/notification_icon" />

            <TextView
                android:id="@+id/tvPushNotificationTitle"
                style="@style/steps_textview_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/push_notification"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchPushNotification"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:buttonTint="@color/selected"
                android:checked="false"
                android:thumbTint="@color/selected"
                android:trackTint="@color/selected" />

        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnSettingsSave"
            style="@style/main_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="16dp"
            android:text="@string/save" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>