<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.StepsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@null"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/mobilehealth_back_icon"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="14dp" />

            <TextView
                style="@style/main_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andika_new_basic_bold"
                android:text="@string/steps" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/steps_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/steps_today" />

                    <TextView

                        android:id="@+id/tvStepsToday"
                        style="@style/steps_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="6543" />

                    <TextView
                        style="@style/steps_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/from" />

                    <TextView
                        android:id="@+id/tvStepsGoal"
                        style="@style/steps_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="10000" />

                    <ProgressBar
                        android:id="@+id/pbStepsToday"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="36dp"
                        android:max="10000"
                        android:progress="6543"
                        android:progressTint="@color/steps"
                        android:scaleY="2" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="36dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="#4D25A66B"
                        android:backgroundTintMode="src_over"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="8dp">

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@drawable/checkmark_icon"
                                app:tint="@color/selected" />

                            <TextView
                                android:id="@+id/tvGoalAchievedDays"
                                style="@style/steps_textview_style"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="6dp"
                                android:text="@string/goal_achieved"
                                android:textColor="@color/not_enabled"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="#DFDFDF"
                        android:layout_marginHorizontal="18dp"
                        app:cardCornerRadius="18dp"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>